# garmin-stats-ai

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ai-cost-and-scan.md  backfill_dates.py  codex.md  infrastructure-setup.md  medical-knowledge-notes.md  walkthrough.md
deploy/: README.md  garmin-fetch@.service  garmin-insights.service
deploy/cloudflared/: .gitignore  README.md
docs/: deployment-security.md
garmin-grafana/: README.md  pyproject.toml
garmin-grafana/.github/: CONTRIBUTING.md
garmin-grafana/Grafana_Dashboard/: Garmin-Grafana-Dashboard.yaml
garmin-grafana/Grafana_Datasource/: influxdb.yaml
garmin-grafana/docs/: manual-import-instructions.md
garmin-grafana/src/garmin_grafana/: environment_fetch.py  garmin_bulk_importer.py  garmin_fetch.py  ha_fetch.py  influxdb_exporter.py  sqlite_manager.py
garmin-insights/: .env.example  check_lifestyle.py  debug_output.txt  pyproject.toml  reset_and_verify.py
garmin-insights/src/garmin_insights/: __init__.py  agent.py  cli.py  config.py  scheduler.py  stats_utils.py
garmin-insights/src/garmin_insights/db/: __init__.py  cache.py  influxdb.py  maintenance.py  memory.py  sqlite_repo.py
garmin-insights/src/garmin_insights/insights/: __init__.py  proactive.py
garmin-insights/src/garmin_insights/knowledge/: __init__.py  medical.py
garmin-insights/src/garmin_insights/tools/: __init__.py  analysis_tools.py  query_tools.py
garmin-insights/src/garmin_insights/web/: app.py  lifestyle_viz.py  sessions.py  user_context.py  visualizations.py
garmin-insights/src/garmin_insights/web/static/: app.js  index.html  style.css  topbar-mockups.html
garmin-insights/tests/: conftest.py  test_analysis_engine.py  test_fitness_markers.py  test_maintenance.py  test_medical_kb.py  test_query_tools_helpers.py  test_stats_utils.py
scripts/: refetch_activity_summary.py  run-dan.sh  run-helen.sh  run-user.sh
users/: .gitignore  alice.env.example  bob.env.example
